--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
+    "fast-sort": "^3.4.1",
     "next": "15.3.2",
     "prisma": "^6.8.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.25.20"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "daisyui": "^5.0.35",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
